--- a/index.html
+++ b/index.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ikho Kwayimani | Portfolio</title>
+    <title>Ikho Kwayimani | ICT Graduate</title>
 </head>
 <body>
 
-<h1>Hello, I'm Ikho</h1>
-
+<h1>Ikho Kwayimani</h1>
 <p>
-Advanced Diploma in ICT (Applications Development).<br>
-Aspiring IT / Software Development Intern.
+Advanced Diploma in ICT (Applications Development)<br>
+Aspiring Analyst / Software Development Intern
+</p>
+
+<hr>
+
+<h2>About Me</h2>
+<p>
+I am an ICT graduate with a strong interest in software development and IT systems.
+I enjoy learning through hands-on projects and building practical solutions.
+I am currently seeking an internship opportunity to gain industry experience as I believe I have a strong of IT foundation.
+</p>
+
+<hr>
+
+<h2>Skills</h2>
+<ul>
+    <li>Python</li>
+    <li>Django</li>
+    <li>Java</li>
+    <li>JavaScript</li>
+    <li>HTML & CSS</li>
+    <li>MongoDB</li>
+    <li>Git & GitHub</li>
+</ul>
+
+<hr>
+
+<h2>Projects</h2>
+<p>
+Projects are currently in progress.  
+I am actively building and will update this section regularly.
+</p>
+
+<hr>
+
+<h2>Contact</h2>
+<p>
+GitHub: <a href="https://github.com/IkhoKwayimani">github.com/IkhoKwayimani</a><br>
+LinkedIn: <a href="https://www.linkedin.com/in/ikhokwayimani">linkedin.com/in/ikhokwayimani</a>
 </p>
 
 </body>
