--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ I am actively building and will update this section regularly.
 <h2>Contact</h2>
 <p>
 GitHub: <a href="https://github.com/IkhoKwayimani">github.com/IkhoKwayimani</a><br>
-LinkedIn: <a href="https://www.linkedin.com/in/ikwayimani">linkedin.com/in/ikhokwayimani</a>
+LinkedIn: <a href="https://www.linkedin.com/in/ikwayimani">linkedin.com/in/ikhokwayimani</a><br>
 Email: ikhoblaai@gmail.com
 </p>
 
