Update stylesheet link to style-v2.css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Ikho Kwayimani | ICT Graduate</title>
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="style-v2.css">
 </head>
 <body>
 
