--- a/index.html
+++ b/index.html
@@ -38,8 +38,17 @@ I am currently seeking an internship opportunity to gain industry experience as 
 
 <h2>Projects</h2>
 <p>
-Projects are currently in progress.  
-I am actively building and will update this section regularly.
+<h3>To-Do List Web App</h3>
+<p>
+A simple web-based to-do list application built using HTML, CSS, and JavaScript.
+Users can add and delete tasks, and tasks are saved using browser localStorage,
+so they persist even after refreshing or closing the browser.
+</p>
+<p>
+<a href="https://ikhokwayimani.github.io/todo-list-app/" target="_blank">Live Demo</a> |
+<a href="https://github.com/IkhoKwayimani/todo-list-app" target="_blank">View Code</a>
+</p>
+
 </p>
 
 <hr>
