--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@ I am currently seeking an internship opportunity to gain industry experience as 
 A simple web-based to-do list application built using HTML, CSS, and JavaScript.
 Users can add and delete tasks, and tasks are saved using browser localStorage,
 so they persist even after refreshing or closing the browser.
+</p> <hr>
+
+<h3>Internship Application Tracker (Python)</h3>
+<p>
+A Python command-line application that tracks internship/job applications.
+It supports adding, viewing, searching, and updating application statuses.
+Data is saved to a CSV file that can be opened in Excel.
+</p>
+<p>
+<a href="https://github.com/IkhoKwayimani/internship-tracker" target="_blank">View Code</a>
 </p>
 <p>
 <a href="https://ikhokwayimani.github.io/todo-list-app/" target="_blank">Live Demo</a> |
